# acdh-django-browsing

./: .coveragerc  .flake8  .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml  test.yml
archiv/: admin.py  filters.py  forms.py  models.py  tables.py  tests.py  urls.py  views.py
archiv/fixtures/: data.json
archiv/migrations/: 0001_initial.py
archiv/templates/archiv/: index.html
browsing/: browsing_utils.py  filters.py  forms.py  urls.py  utils.py  views.py
browsing/migrations/: 0001_initial.py  0002_delete_browsconf.py
browsing/static/browsing/js/: filter-for-blank-fields.js  set-form-attributes.js
browsing/templates/browsing/: create_base_template.html  generic_create.html  generic_detail.html  generic_list.html
browsing/templates/browsing/partials/: chart_form.html  column_selector.html  create-edit_breadcrumb.html  detailview_breadcrumb.html  detailview_title.html  download_menu.html  page_size_selector.html  pagination.html  table.html
browsing/templates/browsing/tags/: column_selector.html
browsing/templatetags/: browsing_extras.py  browsing_tags.py
djangobaseproject/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/partials/: footer.html  head.html  navbar.html
