[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "acdh-django-browsing"
version = "3.4.1"
description = "Django-App providing some useful things to create browsing views"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Peter Andorfer", email = "peter.andorfer@oeaw.ac.at"}
]
requires-python = ">=3.11"
keywords = ["django"]
dependencies = [
    "crispy-bootstrap5",
    "django-crispy-forms",
    "django-filter",
    "django-super-deduper",
    "django-tables2",
    "tablib",
]


[project.optional-dependencies]
# Example for dev dependencies, add as needed
tests = ["pytest", "coverage"]
linting = ["flake8"]
build = ["build"]

[project.urls]
Homepage = "https://github.com/acdh-oeaw/acdh-django-browsing"


[tool.setuptools]
packages = ["browsing"]

[tool.setuptools.package-data]
browsing = ["static/**/*", "templates/**/*"]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "django>=5.2.8",
    "django-next-prev>=1.1.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
